# mls

./: .gitignore  HFOLD_MASTER_IMPLEMENTATION_PLAN.md  HFOLD_PIPELINE_HUMAN_REVIEW.md  HFOLD_PIPELINE_PLAN.md  LICENSE  README.md  _nb_find.py  baselines.ipynb  baselines.py  environment.yml  fine_tune.py  hfold.ipynb  new_fine_tune.ipynb  new_fine_tune.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
adewan_branch/MLSFINAL 2/: README.md  test_hfold_basic.py
checkpoints/: local_experiment_aux_smoke.jsonl  local_experiment_quick.jsonl  local_experiment_smoke.jsonl
final_mks/Fold2/: pyproject.toml
final_mks/Fold2/configs/: pythia_pg19_full.yaml  pythia_pg19_hfold.yaml
final_mks/Fold2/src/hfold_pipeline/: __init__.py  config.py
final_mks/Fold2/src/hfold_pipeline/attention/: full.py  hfold.py  hfold_backend.py  masking.py  native_hfold_core.py  sliding_window.py
final_mks/Fold2/src/hfold_pipeline/data/: __init__.py
final_mks/Fold2/src/hfold_pipeline/modeling/: __init__.py  pythia.py
final_mks/Fold2/src/hfold_pipeline/scripts/: evaluate.py  train.py
final_mks/Fold2/src/hfold_pipeline/training/: __init__.py  metrics.py  trainer.py
final_mks/Fold2/src/hfold_pipeline/utils/: logging.py
final_mks/Fold2/tests/: test_config.py  test_flops.py  test_full_attention_parity.py  test_training_smoke.py
hf_bench/: __init__.py  config.py  data.py  metrics.py  modeling.py  runner.py  trainer.py  utils.py  visualization.py
hfold/: __init__.py  _debug_log.py
hfold_pretrained/: __init__.py  patch.py
scripts/: colab_run.sh  run_all.py
(+110 files in other folders)
