[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-bench-15442"
version = "0.1.0"
description = "Reproducible baseline transformer benchmarks for PG-19 and SCROLLS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.40",
  "datasets>=2.18",
  "numpy>=1.24",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
]

[tool.setuptools.packages.find]
include = ["hf_bench*"]
